part3/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /pingpong
        backend:
          service:
            name: pingpong-svc
            port: 
              number: 80
      - pathType: Prefix
        path: /logs
        backend:
          service:
            name: logoutput-svc
            port: 
              number: 80
